- Password could not be reset from the client (client - server mode)
- Linux: resizing dialog/forms from the right hand side scrambles the dialog

[Updated]
- Improved the preview for the find and replace.
- Improved the find and replace regular expression support.
- Added failed login message if credentials are incorrect.


--------------------------------------------------------------------
Data Crow version 5.0  BETA I                 Released on 2024-09-19
--------------------------------------------------------------------
Data Crow 5.0 is the accumulation of all releases made since picking up Data Crow development.
Version 4.0 has been alive for a long time.. since July the 23th of 2014 to be exact.
Lots of things have changed since then, many of the changes could easily have triggered the release of a new major version.
These past changes combined with the changes as listed below make it justifiable to release a new major version.

[New]
- Picture management has been completed changed; Data Crow now allows for unlimited number of pictures to be added.

[Updated]
- Scrolling performance has been significantly improved for the card list.
- Updated libraries as used by Data Crow to avoid exposure to vulnerabilities: Apache Maven plugins, IZ Pack, Metadata-extractor, Log4j, Bouncy Castle, twelvemonkeys.imageio, org.apache.tika, org.apache.pdfbox, org.jsoup, com.google.code.gson, Xalan, org.hsqldb, org.apache.xmlgraphics.
- Jasper Reports libraries have been bumped up to version 7.0.
- XML Export has been updated;
  * empty values are no longer exported.
  * a valid XSD is now generated for both individual modules as well as for the media module.
  * IDs of items are now exported.
  * attachments can now be exported.
  * related references items are exported in full as well as the current summary for the item that references these.
- XML Import has been updated: