@@ -66,6 +66,11 @@ public class DcFileSizeField extends JTextField implements IComponent {
     }
     
     @Override
+    public void reset() {
+    	setText("");
+    }    
+    
+    @Override
     public void clear() {} 
     
     @Override
