@@ -58,6 +58,11 @@ public class DcLoginNameField extends JTextField implements IComponent {
     }
 
     @Override
+    public void reset() {
+    	setText("");
+    }
+    
+    @Override
     public void clear() {} 
     
     @Override
